--- a/package.json
+++ b/package.json
@@ -17,7 +17,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "axios": "0.18.0",
+    "react-native-gravatar": "1.0.2",
+    "react-native-image-picker": "0.27.1",
+    "react-native-vector-icons": "5.0.0",
+    "react-navigation": "2.14.2",
+    "react-redux": "5.0.7",
+    "redux": "4.0.0",
+    "redux-thunk": "2.3.0"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
   },
   "private": true
 }
